Modificacion del Stack y clase generica nueva